<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/up_padding_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <include
            android:id="@+id/product_header"
            layout="@layout/product_item_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:adjustViewBounds="true"
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/media"
            android:contentDescription="@string/todo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/text_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            >

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/default_font"
                android:text="@string/title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/card_sub_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/low_font"
                android:text="@string/subhead"
                app:layout_constraintTop_toBottomOf="@+id/card_title"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/card_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/low_font"
                android:layout_marginTop="@dimen/max_fab_margin"
                android:text="@string/fish"
                app:layout_constraintTop_toBottomOf="@+id/card_sub_header"
                />


            <Button
                android:id="@+id/enable_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_fab_margin"
                android:text="@string/enabled"
                app:layout_constraintTop_toBottomOf="@+id/card_description"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/enable_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/max_fab_margin"
                android:layout_marginEnd="@dimen/html_default_margin"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/enabled"
                app:layout_constraintTop_toBottomOf="@+id/card_description"
                app:layout_constraintEnd_toStartOf="@+id/enable_btn1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>