<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/product_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/gradient"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/product_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:menu="@menu/menu_product"
            style="@style/Widget.App.Toolbar"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/media"
        app:layout_constraintTop_toBottomOf="@+id/product_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/card_id_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/max_btn_height"
        android:paddingHorizontal="@dimen/max_btn_height"
        android:textSize="@dimen/low_font"
        android:text="@string/id_btn"
        app:layout_constraintBottom_toBottomOf="@+id/card_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_image" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/up_padding_1"
        android:paddingHorizontal="@dimen/fab_margin"
        android:paddingVertical="@dimen/low_padding"
        app:layout_constraintTop_toBottomOf="@+id/card_id_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/purple_300"
        >

        <TextView
            android:id="@+id/subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_font"
            android:textColor="@color/black_800"
            android:text="@string/title2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/description"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_200"
            android:text="@string/fish2"
            app:layout_constraintTop_toBottomOf="@+id/subhead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/switch_layout"
        android:layout_marginTop="@dimen/low_padding"
        android:layout_marginHorizontal="@dimen/up_padding_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_layout">



        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_color"
            android:layout_marginHorizontal="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/switch_text"/>

        <TextView
            android:id="@+id/switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/text_max_width"
            android:layout_marginVertical="@dimen/text_low_margin"
            android:layout_marginEnd="@dimen/medium_padding"
            android:textSize="@dimen/default_font"
            android:text="@string/change_card_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/switch_color"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/max_btn_height"
        android:layout_marginTop="@dimen/up_padding_1"
        android:layout_marginEnd="@dimen/up_padding_2"
        android:textSize="@dimen/low_font"
        android:text="@string/share"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@drawable/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch_layout" />

    <Button
        android:id="@+id/like_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/max_btn_height"
        android:layout_marginTop="@dimen/up_padding_1"
        android:layout_marginEnd="@dimen/up_padding_2"
        android:textSize="@dimen/low_font"
        android:text="@string/like"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@drawable/add"
        app:layout_constraintEnd_toStartOf="@+id/share_btn"
        app:layout_constraintTop_toBottomOf="@id/switch_layout"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>