<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/up_padding_2">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_header_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/fab_margin">
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/max_btn_height"
            android:layout_height="@dimen/max_btn_height"
            android:src="@drawable/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/todo" />
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/text_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:orientation="vertical">
            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/low_padding"
                android:layout_marginBottom="@dimen/text_low_margin"
                android:textStyle="bold"
                android:textSize="@dimen/default_font"
                android:text="@string/header"
                />
            <TextView
                android:id="@+id/sub_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/low_padding"
                android:textSize="@dimen/low_font"
                android:text="@string/sub_header"
                />
        </LinearLayout>
        <ImageView
            android:id="@+id/header_btn"
            android:layout_width="@dimen/low_image_size"
            android:layout_height="@dimen/low_image_size"
            android:src="@drawable/media_low"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
